apps/filebrowser/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  namespace: filebrowser
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      enableServiceLinks: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: filebrowser
          image: gtstef/filebrowser:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /home/filebrowser/data
            - name: musik
              mountPath: /srv/Musik
            - name: media
              mountPath: /srv/Media
            - name: syncthing
              mountPath: /srv/Syncthing
            - name: pictures
              mountPath: /srv/Pictures
            - name: documents
              mountPath: /srv/Documents
          resources:
            limits:
              memory: 256Mi
              cpu: "500m"
            requests:
              memory: 128Mi
              cpu: "10m"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: filebrowser-config
        - name: musik
          persistentVolumeClaim:
            claimName: filebrowser-musik
        - name: media
          persistentVolumeClaim:
            claimName: filebrowser-media
        - name: syncthing
          persistentVolumeClaim:
            claimName: filebrowser-syncthing
        - name: pictures
          persistentVolumeClaim:
            claimName: filebrowser-pictures
        - name: documents
          persistentVolumeClaim:
            claimName: filebrowser-documents
