apps/filebrowser/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filebrowser
  namespace: filebrowser
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: authelia-authelia@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: filebrowser.sanxer.dk
      http:
        paths:
          - backend:
              service:
                name: filebrowser
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - filebrowser.sanxer.dk
      secretName: filebrowser-tls
